feat: created a folder for static files. Changed index.css into static/main/base.css

--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 
 <html>
     <head>
         <meta charset="utf-8">
-        <title>INSAEROSPACE</title>
-        <link rel="stylesheet" href="style.css">
+        <title>{% block title %}{% endblock %} | INSAEROSPACE</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
     </head>
 
     <body>
