--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -11,12 +11,19 @@
 
     <body>
         <header>
-            <h1>INSAEROSPACE</h1>
+            <svg id="header-bg"  viewBox="0 0 1512 151" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+                <path d="M0 0H1512V100.628C1512 100.628 1052.63 126.447 758 126.5C461.81 126.554 0 100.628 0 100.628V0Z" fill="white"/>
+            </svg>
+                
+            <div id="header-site-name">
+                <img src="/static/images/logo/logo-insaerospace.svg" alt="Logo INSAEROSPACE">
+                <a href="/"><span class="logo-red-part">INSA</span>erospace</a>
+            </div>
             <nav>
                 <ul>
-                    <li><a href="#">Nos Projets</a></li>
-                    <li><a href="#">La team</a></li>
-                    <li><a href="#">Nous contacter</a></li>
+                    <a href="#">Nos Projets</a>
+                    <a href="#">La team</a>
+                    <a href="#">Nous contacter</a>
                 </ul>
             </nav>
         </header>
