--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -33,6 +33,13 @@ a {
     font-weight: inherit;
 }
 
+p {
+    font-family: 'Raleway';
+    font-size: 16px;
+    font-weight: 400;
+    /* line-height: 1.5; */
+}
+
 
 
 
@@ -55,7 +62,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 6px 20px;
-    height: 80px;
+    padding-bottom: 20px;
+    height: 110px;
     /* background-color: #ffffff; */
     color: #000000;
     position: sticky;
@@ -64,11 +72,36 @@ header {
     z-index: 1000;
     right: 0;
     left: 0;
+    overflow: hidden;
+
+    font-family: "Raleway";
+
+    transition: border-radius 0.5s, height 0.5s, background-color 0.5s, padding 0.5s;
+
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    /* left: 0; */
+    width: 120vw;
+    height: 100%;
+    background-color: white;
+    z-index: -1;
+    align-self: center;
+    transform: translate(-50%, 0);
+    border-bottom-right-radius: 40%;
+    border-bottom-left-radius: 40%;
+
+    transition: border-radius 0.5s, height 0.5s, background-color 0.5s;
+
 }
 
 
 
- #header-bg {
+#header-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -107,14 +140,37 @@ div#header-site-name>a {
     text-decoration: none;
     color: inherit;
     font-family: "Nasalization";
+    font-size: 24px;
 }
 
 div#header-site-name>img {
-    height: 40px;
+    height: 50px;
 }
 
 
 /* logo */
 span.logo-red-part {
     color: var(--red-insaerospace);
+}
+
+
+
+
+
+
+
+
+/* mobile */
+
+@media (max-width: 800px) {
+    header {
+        padding: 6px 10px;
+        height: 80px;
+    }
+    header::before {
+        border-bottom-right-radius: 0%;
+        border-bottom-left-radius: 0%;
+
+    
+    }
 }
