--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -7,6 +7,8 @@
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %} | INSAEROSPACE</title>
         <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
+        {% block extrahead %}
+        {% endblock %}
     </head>
 
     <body>
@@ -16,7 +18,7 @@
             </svg> -->
                 
             <div id="header-site-name">
-                <img src="/static/images/logo/logo-insaerospace.svg" alt="Logo INSAEROSPACE">
+                <img src="/static/images/logo/logo-insaerospace.svg" alt="Logo INSAerospace">
                 <a href="/"><span class="logo-red-part">INSA</span>erospace</a>
             </div>
             <nav>
@@ -28,8 +30,10 @@
             </nav>
         </header>
 
+        <main>
         {% block content %}
         {% endblock %}
+        </main>
         
 
     </body>
