fix: Header now sticks to the top of the page on home page

--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -5,10 +5,10 @@
 
 
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    /* width: 100vw; */
 
 }
 
