--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %} | INSAEROSPACE</title>
         <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
+        <link rel="shortcut icon" href="{% static 'images/logo/favicon.svg' %}" type="image/x-svgk,lmù">
         {% block extrahead %}
         {% endblock %}
     </head>
