--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -14,5 +14,73 @@ header {
 
 
 main {
-    padding-top: 110px;
+    /* padding-top: 110px; */
+}
+
+
+
+/* caroussel */
+.caroussel {
+    /* position: relative; */
+    /* width: 100vw;
+    height: 100vh; */
+    overflow-x: auto;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+
+  
+    /* justify-content: center;
+    align-items: center; */
+    /* position: relative; */
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch; 
+
+    text-align: center;
+  
+}
+
+.caroussel>div {
+    min-width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+
+    scroll-snap-align: center;
+
+
+}
+
+.caroussel::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+#caroussel-text-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: min-content;
+    text-align: center;
+    text-shadow: 2px 2px 40px rgba(0, 0, 0, 0.7);
+    height: 0;
+    transform: translateY(80vh);
+    
+
+}
+
+#caroussel-text-content h2 {
+    font-size: 80px;
+}
+
+#caroussel-text-content p {
+    font-size: 26px;
+    font-family: 'Raleway';
+    font-weight: 600;
+    word-wrap: break-word;
+    max-width: 100%;
+
+
 }
