feat: Nouvelle version responsive du header ! Quelques améliorations pour mobile Animations entree/sortie du header Le header se referme lorsque la page est redimentionnée latéralement pour éviter les problèmes de menu qui apparaît soudaimenent lors de l'activation du split-screen

--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -102,5 +102,19 @@ main {
     word-wrap: break-word;
     max-width: 100%;
 
+    padding: 0 20px;
 
+
+}
+
+
+@media (max-width: 800px) {
+
+    #caroussel-text-content h2 {
+        font-size: 40px;
+    }
+
+    #caroussel-text-content p {
+        font-size: 16px;
+    }
 }
