fix: ajout balise meta pour la taille de l'affichage - correction du problème de dimension du site sur mobile

--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -29,7 +29,7 @@
     box-sizing: border-box;
 
     /* empêcher Safari de redimensionner les textes comme bon lui semble */
-    -webkit-text-size-adjust:none;
+    /* -webkit-text-size-adjust:none; */
 
 
 }
