transformation des images de l'accueil en .Webp

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<link rel="preload" as="image" href="{% static 'images/photos_accueil/minifusee_champ.jpg' %}" />
+<link rel="preload" as="image" href="{% static 'images/photos_accueil/minifusee_champ.webp' %}" />
 
 <section>
     <div id="caroussel-text-content">
@@ -20,20 +20,20 @@
     <div class="caroussel" onload="addAutoScroll();">
 
         <div class="caroussel-image"
-            style="background-image: url('{% static 'images/photos_accueil/equipe2023.jpg' %}');">
+            style="background-image: url('{% static 'images/photos_accueil/equipe2023.webp' %}');">
         </div>
         <div class="caroussel-image"
-            style="background-image: url('{% static 'images/photos_accueil/lancement-micro-1.jpg' %}');">
+            style="background-image: url('{% static 'images/photos_accueil/lancement-micro-1.webp' %}');">
         </div>
         <div class="caroussel-image"
-        style="background-image: url('{% static 'images/photos_accueil/micro-pull-insa.jpg' %}');">
+        style="background-image: url('{% static 'images/photos_accueil/micro-pull-insa.webp' %}');">
     </div>
 
         <div class="caroussel-image"
-            style="background-image: url('{% static 'images/photos_accueil/minifusee_champ.jpg' %}');"></div>
-        <div class="caroussel-image" style="background-image: url('{% static 'images/photos_accueil/soudure.jpg' %}');">
+            style="background-image: url('{% static 'images/photos_accueil/minifusee_champ.webp' %}');"></div>
+        <div class="caroussel-image" style="background-image: url('{% static 'images/photos_accueil/soudure.webp' %}');">
         </div>        <div class="caroussel-image"
-            style="background-image: url('{% static 'images/photos_accueil/seance-1.jpg' %}');">
+            style="background-image: url('{% static 'images/photos_accueil/seance-1.webp' %}');">
         </div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
