feat: ajout de la page nos-projets (vierge)

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<link rel="preload" as="image" href="{% static 'images/photos_accueil/minifusee_champ.webp' %}" />
+<!-- <link rel="preload" as="image" href="{% static 'images/photos_accueil/minifusee_champ.webp' %}" /> -->
 
 <section>
     <div id="caroussel-text-content">
