ajout du footer

--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -43,6 +43,20 @@
         {% block content %}
         {% endblock %}
         </main>
+
+        <footer>
+            <p class="insaerospace">INSAerospace</p>
+            <div class="line"></div>
+            <div class="links">
+                <a href="{% url 'accueil' %}">Accueil</a>
+                <a href="#">Nos Projets</a>
+                <a href="#">L'équipe INSAerospace</a>
+                <a href="#">Contact</a>
+                <a href="#">Nos Partenaires - <b>Devenir Partenaire</b></a>
+                <a href="#">Mentions Légales</a>
+            </div>
+            <p class="insash">Tous droits réservés - © INSAerospace 2024 - Site réalisé avec ❤️ par ./insa.sh, le Club Info de l’INSA Hauts-de-France</p>
+        </footer>
         
 
     </body>
