--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -127,10 +127,6 @@ header::before {
     width: 100vw;
     height: 120px;
     z-index: -1;
- }
-#header-bg>path {
-    /* width: 100vw; */
-    /* height: 100%; */
 }
 
 
@@ -187,6 +183,53 @@ nav a {
 }
 
 
+/* footer */
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: var(--red-insaerospace);
+    align-items: flex-start;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    gap: 12px;
+}
+
+.insaerospace {
+    color: #FFF;
+    text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.40);
+    font-family: Nasalization;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.line {
+    width: 8%;
+    height: 4px;
+    background-color: #FFF;
+    margin-bottom: 20px;
+}
+
+footer>div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 60px;
+}
+
+footer > div > a {
+    color: white;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.insash {
+    margin: auto;
+}
 
 
 
