--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -107,6 +107,36 @@ main {
 
 }
 
+.stats {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 80px 120px 160px 120px;
+}
+
+.barre {
+    width: 10px;
+    height: 100%;
+    background-color: var(--red-insaerospace);
+}
+
+.valeur {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.valeur > p {
+    padding: 30px 40px;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 32px;
+    font-weight: 700;
+}
+
 
 @media (max-width: 800px) {
 
