--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -36,11 +36,20 @@
             style="background-image: url('{% static 'images/photos_accueil/seance-1.webp' %}');">
         </div>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+    <div class="stats">
+        <div class="valeur">
+            <div class="barre"></div>
+            <p>Membres actifs</p>
+        </div>
+        <div class="valeur">
+            <div class="barre"></div>
+            <p>Micro-fusées/an</p>
+        </div>
+        <div class="valeur">
+            <div class="barre"></div>
+            <p>Années d'experiences</p>
+        </div>
+    </div>
 
 </section>
 <script src="{% static 'main/scripts/accueil.js' %}"></script>
