--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -37,17 +37,28 @@
         </div>
     </div>
     <div class="stats">
-        <div class="valeur">
+        <div class="groupe">
             <div class="barre"></div>
-            <p>Membres actifs</p>
+            <div class="valeur">
+                <p class="nombre">35</p>
+                <p>Membres actifs</p>
+            </div>
         </div>
-        <div class="valeur">
+        
+        <div class="groupe">
             <div class="barre"></div>
-            <p>Micro-fusées/an</p>
+            <div class="valeur">
+                <p class="nombre">27</p>
+                <p>Micro-fusées/an</p>
+            </div>
         </div>
-        <div class="valeur">
+
+        <div class="groupe">
             <div class="barre"></div>
-            <p>Années d'experiences</p>
+            <div class="valeur">
+                <p class="nombre">03</p>
+                <p>Années d'experiences</p>
+            </div>
         </div>
     </div>
 
