feat: api strapi pour afficher les projets

--- a/insaerospace/main/templates/main/nos-projets.html
+++ b/insaerospace/main/templates/main/nos-projets.html
@@ -5,13 +5,11 @@
 
 
 {% block extrahead %}
-
 {% endblock %}
 
+
 {% block content %}
-
-
-
-
+<div id="articles-container"></div>
+<script type="module" src="{% static 'main/scripts/projets.js' %}"></script>
 
 {% endblock %}
