ajout de début de style pour le listage des projets et le listage des articles pour chaque projets. PROBLEMES DE STYLE REMARQUéS

--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -2,7 +2,12 @@
 
 
 /* Styles uniquement applicables à la page accueil.html */
-
+body {
+    background-color: #000;
+    color: #fff;
+    min-height: 120vh;
+    /* overflow-x: hidden; */
+}
 
 header {
     position: fixed;
