--- a/insaerospace/main/templates/main/article_detail.html
+++ b/insaerospace/main/templates/main/article_detail.html
@@ -3,7 +3,11 @@
 
 {% block title %}Article Details{% endblock %}
 
+{% block extrahead %}
+<link rel="stylesheet" href="{% static 'main/article.css' %}">
+{% endblock %}
+
 {% block content %}
-<div id="articlesContainer"></div>
+<div id="singleArticleContainer"></div>
 <script type="module" src="{% static 'main/scripts/article.js' %}"></script>
 {% endblock %}
