feat: les projets sans articles s'affichent maintenant correctement, avec un message indiqunt l'absence d'articles

--- a/insaerospace/main/static/main/article.css
+++ b/insaerospace/main/static/main/article.css
@@ -508,3 +508,15 @@ div.article {
 
 
 }
+
+
+
+
+.messageErreur {
+    text-align:center;
+    font-family: 'Raleway';
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+    padding: 20px;
+}
