feat: le contenu s'affiche correctement (excepté une photo de profil par défaut)

--- a/insaerospace/main/templates/main/nos-membres.html
+++ b/insaerospace/main/templates/main/nos-membres.html
@@ -9,5 +9,9 @@
 {% endblock %}
 
 {% block content %}
- <h1>Notre équipe</h1>
+<h1>Notre équipe</h1>
+
+<div id="membresContainer"></div>
+<script type="module" src="{% static 'main/scripts/membres.js' %}"></script>
+
 {% endblock %}
